# rust-projects

1-closures/src/: main.rs
10-smart-pointers/src/: main.rs
11-variables/src/: main.rs
12-adder/src/: lib.rs
13-celc-fahr/: Cargo.toml
13-celc-fahr/src/: main.rs
14-count-chars/: Cargo.toml
14-count-chars/src/: main.rs
15-greeting/src/: main.rs
16-quotes/src/: main.rs
17-simple-math/src/: main.rs
18-simple-math-gui/: Cargo.toml
18-simple-math-gui/src/: main.rs
19-retirement-calc/: .gitignore  Cargo.toml
19-retirement-calc/src/: main.rs
2-generics/src/: main.rs
20-area-of-rectangle/: Cargo.toml
20-area-of-rectangle/src/: main.rs
21-pizza-party/src/: main.rs
22-self-checkout/src/: main.rs
23-curr-exch-api/: Cargo.toml
23-curr-exch-api/src/: main.rs
24-simple-interest/: Cargo.toml
24-simple-interest/src/: main.rs
25-pwd-strength-indicator/: Cargo.toml
25-pwd-strength-indicator/src/: main.rs
26-guess-the-number/: Cargo.toml
26-guess-the-number/src/: main.rs
27-password-gen/: Cargo.toml
27-password-gen/src/: main.rs
28-echor/: Cargo.toml
28-echor/src/: main.rs
28-echor/tests/: cli.rs
29-catr/: Cargo.toml
29-catr/src/: lib.rs
3-guessing_game/src/: main.rs
30-headr/: Cargo.toml
30-headr/src/: lib.rs
30-headr/tests/: cli.rs
31-wcr/: Cargo.toml
31-wcr/src/: lib.rs
32-uniqr/: Cargo.toml
32-uniqr/src/: lib.rs
32-uniqr/tests/: cli.rs
33-findr/: Cargo.toml
33-findr/src/: lib.rs
33-findr/tests/: cli.rs
5-hello_world/: main
6-minigrep/src/: lib.rs  main.rs
7-ownership/src/: main.rs
(+2 files in other folders)
