[package]
name = "headr"
version = "1.0.0"
edition = "2021"
author = "Ali Ahmed"
about = "head written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
rand = "0.8.5"
